# F2X_NeuroHub

./: .env.demo  .env.production  .env.production.example  .gitignore  .mcp.json  API_MIGRATION_PROGRESS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  ERROR_DASHBOARD_GUIDE.md  EXTERNAL_ACCESS.md  F2X_NeuroHub.code-workspace  F2X_NeuroHub_MES_개선안_v2.0.md  F2X_NeuroHub_MES_검토보고서.md  F2X_NeuroHub_MES_구현가이드.md  F2X_NeuroHub_MES_사양서_v2.0.md  FUTURE_PHASES_ROADMAP.md  IMPLEMENTATION_COMPLETE.md  MODULAR_STRUCTURE_COMPLETE.md  OFFLINE_MODE_ENHANCEMENT_COMPLETE.md  OPTIMIZATION_COMPLETE.md  README.md  REFACTORING_COMPLETION_REPORT.md  THEME_SYSTEM_IMPLEMENTATION_REPORT.md  WIP_CODE_REVIEW_FINDINGS.md  WIP_PHASE2_COMPLETION_SUMMARY.md  Withforce_MES_사양서_v2.0.docx  check_lot.py  check_users_simple.py  convert_md_to_docx.py  convert_md_to_pdf.py  deploy.bat  deploy.sh  dev.db-shm  dev.db-wal  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_docker_compose.py  (+3 more)
backend/: .env.example  .env.template  .gitignore  API_MIGRATION_GUIDE.md  Dockerfile  N+1_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PHASE3_COVERAGE_PROGRESS.md  PHASE3_FINAL_REPORT.md  PHASE3_PARALLEL_COMPLETION_REPORT.md  PROCESS_DATA_TEST_SUCCESS.md  README.md  REFACTORING_SUMMARY.md  SETUP_ALEMBIC.md  TEMP_CORRECT_CODE.md  TEST_FIX_PROGRESS.md  add_process_data_columns.py  alembic.ini  backend_logs.txt  check_data.py  check_db_config.py  check_process_data_schema.py  check_process_settings.py  check_schema.py  check_tabs.py  check_wip_process_data.py  debug_get_by_wip_id.py  dev.db-shm  dev.db-wal  diagnose_wip_completion.py  docker-compose.yml  env_config.txt  fix_auth.py  fix_imports.py  fix_process_service.py  fix_tz.py  fix_tz2.py  fix_wip_completion.py  init_db.py  list_tables.py  (+29 more)
backend/.docs/: DOCUMENTATION_ANALYSIS_REPORT.md  README.md
backend/alembic/: env.py  script.py.mako
neurohub_client/: NeuroHubClient.spec  README.md  config.json  config.template.json  installer.iss  main.py  pyproject.toml  version_info.txt
production_tracker_app/: ARCHITECTURE.md  THREADING_IMPLEMENTATION.md  THREADING_SUMMARY.md  config.py  demo_mode.py  main.py  pyproject.toml  requirements.txt  reset_first_run.py
(+1352 files in other folders)
