[project]
name = "f2x-neurohub-backend"
version = "0.1.0"
description = "Manufacturing Execution System API for F2X NeuroHub"
authors = [
    {name = "F2X NeuroHub Team", email = "team@f2x.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "python-barcode[images]>=0.15.1",
    "qrcode[pil]>=7.4.2",
    "zebra>=0.1.0",
    "celery>=5.4.0",
    "redis>=5.0.4",
    "faker>=38.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "openapi-spec-validator>=0.7.1",
    "faker>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
