[project]
name = "f2x-neurohub-tracker"
version = "0.1.0"
description = "Production Tracker App for F2X NeuroHub"
authors = [
    {name = "F2X NeuroHub Team", email = "team@f2x.com"},
]
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
